objects/ASI_CRM_OutlookVSShipment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region__c</fullName>
        <formula>ASI_CRM_Region__r.ASI_CRM_Greater_Region__r.ASI_CRM_Greater_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Greater Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlook_VS_Shipment_Rate__c</fullName>
        <formula>IF(ASI_CRM_Outlook__c=0, 0, ASI_CRM_Shipment__c / ASI_CRM_Outlook__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook VS Shipment Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlook__c</fullName>
        <label>Outlook</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Outlook VS Shipment</relationshipLabel>
        <relationshipName>Outlook_VS_Shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Shipment__c</fullName>
        <label>Shipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Outlook VS Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Date__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Greater_Region__c</columns>
        <columns>ASI_CRM_Outlook__c</columns>
        <columns>ASI_CRM_Outlook_VS_Shipment_Rate__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Shipment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OS-{00000000}</displayFormat>
        <label>Outlook VS Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlook VS Shipment</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Outlook_VS_Shipment</fullName>
        <active>true</active>
        <label>CN Outlook VS Shipment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>